# objective-go

./: .gitignore  CMakeLists.txt  build.gradle  main.cpp  settings.gradle
src/main/scala/go/cmd/: Main.scala
src/main/scala/go/compiler/: AST.scala  Parser.scala  SyntaxError.scala  Token.scala  Tokenizer.scala  Type.scala
src/main/scala/go/utils/: Location.scala  MonoBuffer.scala  OpTree.scala
src/test/scala/go/compiler/: TestTokenizer.scala
tokenizer/: token.cpp  token.h  tokenizer.h
utils/: format.h  repr.cpp  repr.h  traits.h  types.h
